--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -16,6 +16,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <activity
+            android:name="com.iblancasa.ArduBand.About"
+            android:label="@string/app_name"
+            android:parentActivityName="com.iblancasa.ArduBand.About" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.iblancasa.ArduBand.About" />
+        </activity>
+
+
     </application>
 
 </manifest>
